[metadata]
name = heterodyne-sensitivity
version = attr: heterodyne-sensitivity.__version__
url = https://github.com/ishiishun/heterodyne-sensitivity
author =Shun Ishii
author_email = shun.ishii@nao.ac.jp
license_files = LICENSE
description = heterodyne-sensitivity: Personal Python package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
  psutil
  requests
python_requires = >=3.5
entry_points = 
packages = find: